--- a/src/index.css
+++ b/src/index.css
@@ -125,8 +125,54 @@
   font-weight: normal;
   font-style: normal;
 }
-
+@font-face {
+  font-family: "RobotoBold";
+  src: url("./assets/fonts/Roboto-Bold.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "RobotoMedium";
+  src: url("./assets/fonts/Roboto-Medium.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "RobotoRegular";
+  src: url("./assets/fonts/Roboto-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "RobotoLight";
+  src: url("./assets/fonts/Roboto-Light.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "InterRegular";
+  src: url("./assets/fonts/Inter-Regular.otf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
 
 .font-posterama {
   font-family: "Posterama2001", sans-serif;
+}
+.font-robotoBold {
+  font-family: "RobotoBold", sans-serif;
+}
+.font-robotoMedium {
+  font-family: "RobotoMedium";
+}
+.font-robotoRegular {
+  font-family: "RobotoRegular";
+}
+.font-robotoLight {
+  font-family: "RobotoLight";
+}
+
+
+.font-interRegular{
+  font-family: "InterRegular";
 }
